add the report scam page as a card

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -100,9 +100,7 @@
   <section class="trending-scams-section text-center" id="trending-scams">
     <h2 class="display-5">Stay Secure: Tools & Resources</h2>
 
-    
     <div class="card-container">
-      
       <div class="card">
 				<div class="content">
 					<div class="imgBx">
@@ -117,18 +115,32 @@
         <a href="../scrollytelly/data.html"> Discover More </a>
 			</div>
 
-			<div class="card">
+      <div class="card">
 				<div class="content">
 					<div class="imgBx">
-            <!-- Ref: https://www.freepik.com/free-vector/steal-data-concept_8268968.htm#query=clone%20phishing&position=7&from_view=keyword&track=ais_hybrid&uuid=b10037ea-8885-479f-98ec-de3c56467716 -->
-						<img src="./assets/clonePhishingSmall.jpg">
+            <!-- Ref: https://www.freepik.com/free-photo/laptop-with-fake-news-magnifying-glass_12225930.htm#fromView=search&page=1&position=2&uuid=dbeccb18-5509-4a9f-ba61-ec851d436aeb -->
+						<img src="./assets/searchEnginePhishingSmall.jpg">
 					</div>
           <br>
 					<div class="contentBx">
-						<h3>Types of Phishing Scams</h3>
+						<h3>Fraud E-mail Detection</h3>
 					</div>
         </div>
-        <a href="businessEmailCompromisePhishing.html"> Learn More </a>
+        <a href="../fraud_detection/backend/email_detection.html"> Find Out How to Spot Email Fraud </a>
+			</div>
+
+      <div class="card">
+				<div class="content">
+					<div class="imgBx">
+            <!-- Ref: https://www.freepik.com/free-vector/steal-data-concept_8268968.htm#query=clone%20phishing&position=7&from_view=keyword&track=ais_hybrid&uuid=b10037ea-8885-479f-98ec-de3c56467716 -->
+						<img src="./assets/BECSmall.jpg">
+					</div>
+          <br>
+					<div class="contentBx">
+						<h3>Report Phishing Scams</h3>
+					</div>
+        </div>
+        <a href="./scamReport/index.html"> Submit a Report </a>
 			</div>
 
       <div class="card">
@@ -148,15 +160,25 @@
       <div class="card">
 				<div class="content">
 					<div class="imgBx">
-            <!-- Ref: https://www.freepik.com/free-photo/laptop-with-fake-news-magnifying-glass_12225930.htm#fromView=search&page=1&position=2&uuid=dbeccb18-5509-4a9f-ba61-ec851d436aeb -->
-						<img src="./assets/searchEnginePhishingSmall.jpg">
+            <!-- Ref: https://www.freepik.com/free-vector/steal-data-concept_8268968.htm#query=clone%20phishing&position=7&from_view=keyword&track=ais_hybrid&uuid=b10037ea-8885-479f-98ec-de3c56467716 -->
+						<img src="./assets/clonePhishingSmall.jpg">
 					</div>
           <br>
 					<div class="contentBx">
-						<h3>E-mail Fraud Detection</h3>
+						<h3>Types of Phishing Scams</h3>
 					</div>
         </div>
-        <a href="../fraud_detection/backend/email_detection.html"> Find Out How to Spot Email Fraud </a>
+        <a href="businessEmailCompromisePhishing.html"> Learn More </a>
+			</div>
+
+      <div class="cardEmpty">
+				<div class="content">
+					<div class="imgBx"> 
+					</div>
+          <br>
+					<div class="contentBx">
+					</div>
+        </div>
 			</div>
 		</div>
   </section>
