added demo for the sidebar in education pages

--- a/frontend/businessEmailCompromisePhishing.html
+++ b/frontend/businessEmailCompromisePhishing.html
@@ -46,9 +46,7 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                   <li class="nav-item">
-                    <a class="nav-link" href="index.html"
-                      >Home</a
-                    >
+                    <a class="nav-link" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="../scrollytelly/data.html">Trending Scams</a>
@@ -62,62 +60,66 @@
                   <li class="nav-item">
                     <a class="nav-link" href="./Quiz/quiz.html">Test Your Knowledge</a>
                   </li>
-                  <li class="nav-item dropdown active">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Discover
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="businessEmailCompromisePhishing.html">Business Email Compromise Phishing</a>
-                      <a class="dropdown-item" href="clonePhishing.html">Clone Phishing</a>
-                      <a class="dropdown-item" href="popupPhishing.html">Pop-up Phishing</a>
-                      <a class="dropdown-item" href="searchEnginePhishing.html">Search Engine Phishing</a>
-                      <a class="dropdown-item" href="smishingPhishing.html">Smishing</a>
-                      <a class="dropdown-item" href="spearPhishing.html">Spear Phishing</a>
-                      <a class="dropdown-item" href="voicePhishing.html">Voice Phishing</a>
-                    </div>
+                  <li class="nav-item">
+                    <a class="nav-link" href="businessEmailCompromisePhishing.html">Scam Overview</a>
                   </li>
                 </ul>
               </div>
             </div>
         </nav>
 
-        <!-- Reference: all the text contents come from https://cheapsslsecurity.com/blog/what-is-voice-phishing-vishing-definition-meaning/ -->
-        <section class="scam-introduction-section">
-            <h1>Business Email Compromise Phishing</h1>
-            <p>
-              Business Email Compromise (BEC) is a form of cybercrime in which scammers use email to deceive individuals into transferring funds or revealing confidential company information. The perpetrator impersonates a trusted figure, requesting payment for a fraudulent invoice or seeking sensitive data that can be exploited for further scams.</p>
-        </section>
-
-        <section class="scam-real-life-examples-section">
-            <div class="content">
-                <h2>Real-Life Examples</h2>
+        <div class="wrapper">
+          <div class="sidebar">
+              <ul>
+                <li><a href="businessEmailCompromisePhishing.html" class="active">Business Email Compromise Phishing</a></li>
+                <li><a href="clonePhishing.html">Clone Phishing</a></li>
+                <li><a href="popupPhishing.html">Pop-up Phishing</a></li>
+                <li><a href="searchEnginePhishing.html">Search Engine Phishing</a></li>
+                <li><a href="smishingPhishing.html">Smishing</a></li>
+                <li><a href="spearPhishing.html">Spear Phishing</a></li>
+                <li><a href="voicePhishing.html">Voice Phishing</a></li>
+              </ul> 
+          </div>
+          <div class="main_content">
+            <!-- Reference: all the text contents come from https://cheapsslsecurity.com/blog/what-is-voice-phishing-vishing-definition-meaning/ -->
+            <section class="scam-introduction-section">
+                <h1>Business Email Compromise Phishing</h1>
                 <p>
-                  Even smaller charities are at risk of Business Email Compromise (BEC). For instance, Treasure Island, a homeless charity, lost $625,000 to a BEC scam when hackers impersonated Executive Director Sherry Williams. They manipulated the details on a legitimate invoice and altered the wire transfer instructions to redirect funds for their own benefit.</p>
-            </div>
-            <div class="image-container">
-                <!-- Image Reference: https://www.mailguard.com.au/blog/whaling-ceo-fraud-business-email-compromise-targeted-spear-phishing-attacks-continue-to-trouble-businesses -->
-                <img src="./assets/BEC.jpg" alt="Real-life example illustration" />
-            </div>
-        </section>
+                  Business Email Compromise (BEC) is a form of cybercrime in which scammers use email to deceive individuals into transferring funds or revealing confidential company information. The perpetrator impersonates a trusted figure, requesting payment for a fraudulent invoice or seeking sensitive data that can be exploited for further scams.</p>
+            </section>
 
-        <section class="scam-prevent-section">
-            <h2>How to Prevent</h2>
-            <div class="list-container">
-                <ol class="gradient-list">
-                  <li>Always call to confirm requests for money transfers or sensitive information instead of replying to the email.</li>
-                  <li>Implement two-factor authentication for company emails to enhance security against unauthorized access.</li>
-                  <li>Limit access to critical company information to only necessary personnel.</li>
-                  <li>Set up alerts for any unusual activities in company accounts.</li>
-                  <li>Educate employees on recognizing suspicious emails, especially those that appear urgent and seem to come from executives.</li>
-                </ol>
-            </div>
-        </section>
+            <section class="scam-real-life-examples-section">
+                <div class="content">
+                    <h2>Real-Life Examples</h2>
+                    <p>
+                      Even smaller charities are at risk of Business Email Compromise (BEC). For instance, Treasure Island, a homeless charity, lost $625,000 to a BEC scam when hackers impersonated Executive Director Sherry Williams. They manipulated the details on a legitimate invoice and altered the wire transfer instructions to redirect funds for their own benefit.</p>
+                </div>
+                <div class="image-container">
+                    <!-- Image Reference: https://www.mailguard.com.au/blog/whaling-ceo-fraud-business-email-compromise-targeted-spear-phishing-attacks-continue-to-trouble-businesses -->
+                    <img src="./assets/BEC.jpg" alt="Real-life example illustration" />
+                </div>
+            </section>
 
-        <section class="how-to-prevent-section">
-          <h2>Recovery Steps</h2>
-          <br>
-          <p>If you suspect a Business Email Compromise (BEC) incident, immediately disconnect affected devices from the internet and change passwords for compromised accounts. Notify your IT and security teams for investigation and mitigation. Review financial transactions for unauthorized activity and analyze email logs to identify any suspicious behavior. Monitor all accounts closely for unusual activities and inform employees about the incident to raise awareness. Report the BEC incident to law enforcement and relevant regulatory bodies. Finally, reassess and strengthen security protocols, including training employees to recognize phishing and BEC scams, and consider enrolling in identity theft protection services if sensitive data was compromised.</p>
-        </section>
+            <section class="scam-prevent-section">
+                <h2>How to Prevent</h2>
+                <div class="list-container">
+                    <ol class="gradient-list">
+                      <li>Always call to confirm requests for money transfers or sensitive information instead of replying to the email.</li>
+                      <li>Implement two-factor authentication for company emails to enhance security against unauthorized access.</li>
+                      <li>Limit access to critical company information to only necessary personnel.</li>
+                      <li>Set up alerts for any unusual activities in company accounts.</li>
+                      <li>Educate employees on recognizing suspicious emails, especially those that appear urgent and seem to come from executives.</li>
+                    </ol>
+                </div>
+            </section>
+
+            <section class="how-to-prevent-section">
+              <h2>Recovery Steps</h2>
+              <br>
+              <p>If you suspect a Business Email Compromise (BEC) incident, immediately disconnect affected devices from the internet and change passwords for compromised accounts. Notify your IT and security teams for investigation and mitigation. Review financial transactions for unauthorized activity and analyze email logs to identify any suspicious behavior. Monitor all accounts closely for unusual activities and inform employees about the incident to raise awareness. Report the BEC incident to law enforcement and relevant regulatory bodies. Finally, reassess and strengthen security protocols, including training employees to recognize phishing and BEC scams, and consider enrolling in identity theft protection services if sensitive data was compromised.</p>
+            </section>
+          </div>
+        </div>
 
         <!-- Add a navigation button to the next scam page -->
         <!--
